video modal and video button built

--- a/src/components/PopUps/ModalWrapper.astro
+++ b/src/components/PopUps/ModalWrapper.astro
@@ -90,7 +90,7 @@ const { modalType } = Astro.props as Props;
         z-index: 2;   
 
         font-size: var(--theme-text-base);
-        margin: 1.5rem auto auto;
+        //margin: 1.5rem auto auto;
         border: 1px solid var(--theme-divider);
         border-radius: 0.5rem;
         background-color: var(--theme-bg);
