--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,6 +17,7 @@ import SplashAnimation from '../components/SplashAnimation.astro';
 import QRCodeModal from '~/components/PopUps/QRCodeModal.astro';
 import OptionsModal from '~/components/PopUps/OptionsModal.astro';
 import FeedbackModal from '~/components/PopUps/FeedbackModal.astro';
+import VideoModal from '~/components/PopUps/VideoModal.astro';
 
 export interface Props {
 	content: CollectionEntry<'docs'>['data'];
@@ -172,6 +173,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 		<QRCodeModal/>
 		<OptionsModal/> 
 		<FeedbackModal/>
+		<VideoModal/>
 		<!-- <ReloadPrompt /> -->
 		
 		<!--Start of Tawk.to Script-->
