--- a/src/components/PopUps/ModalWrapper.astro
+++ b/src/components/PopUps/ModalWrapper.astro
@@ -112,11 +112,16 @@ const { modalType } = Astro.props as Props;
 <script type="text/javascript">
   function modalClose(){
     var elements = document.querySelectorAll('.ModalWrapper');
-    
+    modalVideoRemove()
     elements.forEach(element => {
       //target all instances of ModalWrapper
       element.classList.remove("active"); 
     });
+  }
+
+  function modalVideoRemove(){
+    var videoElement = document.querySelector(".ModalWrapper[data-modal='video'] iframe");
+    videoElement.setAttribute('src', '');
   }
 
   document.addEventListener("keydown", function(event) {
