--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,8 +12,11 @@ import { useTranslations } from '../i18n/util';
 import { getLanguageFromURL } from '../util';
 import { getPageCategory } from '../util/getPageCategory';
 import { pwaInfo } from 'virtual:pwa-info';
-import ReloadPrompt from '../components/ReloadPrompt.astro';
+
 import SplashAnimation from '../components/SplashAnimation.astro';
+
+/* Popups/Modals/Lightboxes/Dialogs/etc */
+import ReloadPrompt from '~/components/ReloadPrompt.astro';
 import QRCodeModal from '~/components/PopUps/QRCodeModal.astro';
 import OptionsModal from '~/components/PopUps/OptionsModal.astro';
 import FeedbackModal from '~/components/PopUps/FeedbackModal.astro';
