--- a/src/components/PopUps/AnnouncementModal.astro
+++ b/src/components/PopUps/AnnouncementModal.astro
@@ -39,11 +39,11 @@ import AnnouncementsContent from '~/components/AnnouncementsContent.astro';
       }
       .announcementText{
         width: 100%;
-        height: 20ch;
+        height: 30ch;
         background: #fff;
         padding: 1rem;
         border-radius: 0.5rem;
-        border: 1px solid var(--theme-divider);
+        border: $borderSize solid var(--theme-divider);
         overflow-y: scroll;
       }
       
