--- a/src/components/PopUps/OptionsModal.astro
+++ b/src/components/PopUps/OptionsModal.astro
@@ -2,7 +2,7 @@
 // This is the frontmatter section where you can import other components or scripts if needed
 
 import ModalWrapper from '~/components/PopUps/ModalWrapper.astro';
-import UserInfo from '~/components/UserInfo.astro';
+import UserInfo from '~/components/DynamicContent/UserInfo.astro';
 
 ---
 
