LoadingPlaceholder component set up

--- a/src/components/DynamicContent/UserInfo.astro
+++ b/src/components/DynamicContent/UserInfo.astro
@@ -1,7 +1,9 @@
 ---
 // This is the frontmatter section where you can import other components or scripts if needed
 
-import Button from '~/components/Button.astro'
+//DOCS: https://github.com/netlify/netlify-identity-widget/tree/master
+
+import LoadingPlaceholder from '~/components/DynamicContent/LoadingPlaceholder.astro';
 
 const { info } = Astro.props as Props;
 ---
