--- a/src/components/DynamicContent/IfLoggedIn.astro
+++ b/src/components/DynamicContent/IfLoggedIn.astro
@@ -1,13 +1,17 @@
 ---
 // This is the frontmatter section where you can import other components or scripts if needed
 
+//DOCS: https://github.com/netlify/netlify-identity-widget/tree/master
+
+import LoadingPlaceholder from '~/components/DynamicContent/LoadingPlaceholder.astro';
+
 const { info } = Astro.props as Props;
 ---
 
 <div class="IfLoggedIn">
 
   <div class="placeholder">
-    Loading...
+    <LoadingPlaceholder/>
   </div>
   
   <div class="loggedIn">
