Revert "updated search button within modal and instant search"
This reverts commit 9584fc0fc4355ef49b81757528b4ea0b5780e8a0.

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -9,7 +9,7 @@ import OptionsButton from './OptionsButton.astro';
 import AnnouncementButton from '~/components/Buttons/AnnouncementButton.astro';
 import Logo from '~/components/SVGs/Logo.astro';
 
-import SearchButton from './../Buttons/SearchButton.astro';
+import SimpleSearch from './SimpleSearch';
 
 import { getLanguageFromURL } from '../../util';
 import { getDocSearchStrings, useTranslations } from '../../i18n/util';
@@ -47,12 +47,10 @@ const t = useTranslations(Astro);
 			/>
 		}
 		
-		<!-- {import.meta.env.PUBLIC_FEATURE_SEARCH=="true" &&
+		{import.meta.env.PUBLIC_FEATURE_SEARCH=="true" &&
 			<Search {lang} labels={docsearchStrings} />
-		} -->
-
-		<SearchButton />
-
+		}
+		<SimpleSearch client:idle />
 		<OptionsButton/>
 		
 		<SidebarToggle client:idle />
