--- a/src/components/Buttons/SearchButton.astro
+++ b/src/components/Buttons/SearchButton.astro
@@ -23,10 +23,21 @@
       background-color: transparent;
       cursor: pointer;
       font-size: 1rem;
-      padding: 0.25em 1.5em 0.25em 0.75em;
+      padding: 0.25em .75em 0.25em 0.75em;
       line-height: calc(1 / var(--theme-text-xs));
+      min-height: 34px;
       span {
+        display: none;
         // color: var(--theme-text-lighter);
+      }
+      @media (min-width: 800px) {
+        padding: 0.25em 1.5em 0.25em 0.75em;
+        span {
+          display: block;
+        }
+        svg {
+          margin: 0 10px 0 0;
+        }
       }
       &:hover{
         background-color: var(--custom-accent-2-10);
@@ -36,12 +47,12 @@
       }
       .SearchButton_inner {
         display: flex;
-        // align-items: center;
+        align-items: center;
       }
       svg{
         position: relative;
-        top: 4px;
-        margin: 0 10px 0 0;
+        // top: 4px;
+        
 
       }
   }
