--- a/src/components/Buttons/AnnouncementButton.astro
+++ b/src/components/Buttons/AnnouncementButton.astro
@@ -3,13 +3,20 @@
 
 import ButtonNotification from '~/components/Buttons/ButtonNotification.astro';
 
+
+
 const { videoLink, text } = Astro.props as Props;
 ---
 
 <button 
   class='AnnouncementButton' 
-  onclick="modalOpenAnnouncement(); buttonNotificationOff();"
-  data-notification="true"
+  onclick="
+    modalOpenAnnouncement(); 
+    buttonNotificationOff();
+    SessionManager.setItem('AnnouncementsNotification', 'false');
+    console.log( SessionManager.getItem('AnnouncementsNotification'));
+  "
+  data-notification="false"
 >
   Announcements
   <div class="notificationWrapper">
@@ -51,14 +58,33 @@ const { videoLink, text } = Astro.props as Props;
 </style>
 
 <script type="text/javascript">
+ 
+  //add notification dot if conditions are met
+  function buttonNotificationOn(){
+    var targetElement = document.querySelector(".AnnouncementButton");
+    targetElement.setAttribute("data-notification","true");
+    SessionManager().setItem('AnnouncementsNotification', 'true');
+  }
+
+  //remove notification dot
   function buttonNotificationOff(){
     event.currentTarget.setAttribute("data-notification","false");
   }
 
+  //open announcement modal
   function modalOpenAnnouncement(){
-    
-    //open announcement modal
     var targetElement = document.querySelector(".ModalWrapper[data-modal='announcement']");
     targetElement.classList.add("active");
+  }
+
+  //RUN FUNCTIONS
+  const sessionVar = SessionManager.getItem('AnnouncementsNotification');
+
+  console.log(sessionVar);
+  if (sessionVar == false){
+    //nothing
+  } else {
+    console.log("sessionVar !== 'false'");
+    buttonNotificationOn();
   }
 </script>
