JS console logs cleanup

--- a/src/components/SessionManager.astro
+++ b/src/components/SessionManager.astro
@@ -26,6 +26,7 @@
     },
     clearAll: function() {
       sessionStorage.clear();
+      console.log("SessionManager data cleared")
     }
   };
 
