--- a/src/components/Buttons/SearchButton.astro
+++ b/src/components/Buttons/SearchButton.astro
@@ -1,15 +1,16 @@
 ---
 // This is the frontmatter section where you can import other components or scripts if needed
 
-
+import { Icon } from "astro-icon";
 // const { videoLink, text } = Astro.props as Props;
 ---
 
 <button class='SearchButton' onclick="modalOpenSearch();">
 <div class="SearchButton_inner">
-  <svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" focusable="false" aria-hidden="true" role="img" class="astro-F4DDINW2">
+  <!-- <svg width="1em" height="1em" viewBox="0 0 24 24" fill="none" focusable="false" aria-hidden="true" role="img" class="astro-F4DDINW2">
     <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" transform="translate(-1)" class="astro-F4DDINW2"></path>
-  </svg> 
+  </svg>  -->
+  <Icon name=ion:search  />
   <span>Search</span>
 </div> 
 </button>
