--- a/src/layouts/SplashLayout.astro
+++ b/src/layouts/SplashLayout.astro
@@ -16,6 +16,7 @@ import OptionsModal from '~/components/PopUps/OptionsModal.astro';
 import FeedbackModal from '~/components/PopUps/FeedbackModal.astro';
 import VideoModal from '~/components/PopUps/VideoModal.astro';
 import AnnouncementModal from '~/components/PopUps/AnnouncementModal.astro';
+import SearchModal from '~/components/PopUps/SearchModal.astro';
 
 export interface Props {
 	title: string;
@@ -64,5 +65,6 @@ const t = useTranslations(Astro);
 		<FeedbackModal/>
 		<VideoModal/>
 		<AnnouncementModal/>
+		<SearchModal/>
 	</body>
 </html>
