--- a/src/components/Buttons/SearchButton.astro
+++ b/src/components/Buttons/SearchButton.astro
@@ -26,6 +26,9 @@
       padding: 0.25em .75em 0.25em 0.75em;
       line-height: calc(1 / var(--theme-text-xs));
       min-height: 36px;
+      [astro-icon] {
+        color: var(--theme-text);
+      }
       span {
         display: none;
         // color: var(--theme-text-lighter);
