width and display on desktop fix, link color fix for options and search icon

--- a/src/components/Buttons/SearchButton.astro
+++ b/src/components/Buttons/SearchButton.astro
@@ -51,6 +51,7 @@
       .SearchButton_inner {
         display: flex;
         align-items: center;
+        color: var(--theme-text);
       }
       svg{
         position: relative;
