--- a/src/components/Header/OptionsButton.astro
+++ b/src/components/Header/OptionsButton.astro
@@ -19,6 +19,7 @@ const { heading, body } = Astro.props as Props;
       cursor: pointer;
       font-size: 1rem;
       padding: 0.15em;
+      color: var(--theme-text);
       line-height: calc(1 / var(--theme-text-xs));
       &:hover{
         background-color: var(--custom-accent-2-10);
