--- a/src/components/Forms/FeedbackForm.astro
+++ b/src/components/Forms/FeedbackForm.astro
@@ -90,8 +90,9 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 		</a> -->
 	</div>
 </form>
-<div class="success-pane" hidden tabindex="-1">
-	<img src={houston} alt="" width="128" height="128" />
+<div class="success-pane" hidden tabindex="-1">>
+	<!-- <img src={houston} alt="" width="128" height="128" /> -->
+	<svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 24 24"><path fill="#054C62" d="M23 10a2 2 0 0 0-2-2h-6.32l.96-4.57c.02-.1.03-.21.03-.32c0-.41-.17-.79-.44-1.06L14.17 1L7.59 7.58C7.22 7.95 7 8.45 7 9v10a2 2 0 0 0 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2M1 21h4V9H1v12Z"/></svg>
 	<p>
 		<UIString key="feedback.success" />
 	</p>
@@ -326,6 +327,7 @@ const instanceId = Math.round(Math.random() * 10e9).toString(36);
 
 	.success-pane {
 		padding: 2rem;
+		text-align: center;
 	}
 
 	button[data-close-modal] {
