debugging | console.logs added to <Progress>

--- a/src/components/tutorial/Progress.astro
+++ b/src/components/tutorial/Progress.astro
@@ -43,6 +43,9 @@ const doneLabel = t('progress.done');
 <script>
 	import { ProgressStore } from './ProgressStore';
 
+	console.log("CheckMark HTML Element creation started");
+	console.log(ProgressStore);
+
 	class CheckMark extends HTMLElement {
 		private readonly loaded: boolean;
 		private readonly todoLabel: string;
