updates to buttons and index page

--- a/src/components/DynamicContent/IfLoggedIn.astro
+++ b/src/components/DynamicContent/IfLoggedIn.astro
@@ -11,7 +11,7 @@ const { info } = Astro.props as Props;
 <div class="IfLoggedIn">
 
   <div class="placeholder">
-    <LoadingPlaceholder/>
+    <!-- <LoadingPlaceholder/> -->
   </div>
   
   <div class="loggedIn">
