--- a/src/components/Buttons/AnnouncementButton.astro
+++ b/src/components/Buttons/AnnouncementButton.astro
@@ -34,7 +34,8 @@ const { videoLink, text } = Astro.props as Props;
       position: relative;
       border: 1px solid var(--custom-accent-1-50);
       border-radius: 0.5rem;
-      background-color: transparent;
+      // background-color: transparent;
+      background-color: var(--theme-code-inline-bg);
       cursor: pointer;
       font-size: 1rem;
       padding: 0.25em 0.5em;
