--- a/src/components/Buttons/FeedbackButton.astro
+++ b/src/components/Buttons/FeedbackButton.astro
@@ -19,7 +19,8 @@ const { heading, body } = Astro.props as Props;
   .FeedbackButton {
       border: 1px solid var(--custom-accent-1-50);
       border-radius: 0.5rem;
-      background-color: transparent;
+      // background-color: transparent;
+      background-color: var(--theme-code-inline-bg);
       cursor: pointer;
       font-size: 1rem;
       padding: 0.25em 0.5em;
