--- a/src/components/Buttons/SearchButton.astro
+++ b/src/components/Buttons/SearchButton.astro
@@ -20,7 +20,8 @@
       position: relative;
       border: 1px solid var(--custom-accent-1-50);
       border-radius: 1.5rem;
-      background-color: transparent;
+      // background-color: transparent;
+      background-color: var(--theme-code-inline-bg);
       cursor: pointer;
       font-size: 1rem;
       padding: 0.25em .75em 0.25em 0.75em;
