--- a/src/components/DynamicContent/LoadingPlaceholder.astro
+++ b/src/components/DynamicContent/LoadingPlaceholder.astro
@@ -4,44 +4,103 @@
 //DOCS: https://github.com/netlify/netlify-identity-widget/tree/master
 
 const { text } = Astro.props as Props;
+
+
+
 ---
 
 <div class="LoadingPlaceholder">
   <span class="text">
     {text ? text : "Loading"}
   </span>
+  <div class="loading-bar-container">
+    <div class="loading-bar"></div>
+  </div>
 </div>
 
-<style lang="scss">
-  .LoadingPlaceholder{
-    .text{
-      display: block;
-    }
-    .text:after {
-      content: ' .';
-      font-size: 2em;
-      animation: dots 1.5s steps(5, end) infinite;}
+<script>
 
-    @keyframes dots {
-      0%, 15% {
-        color: transparent;
-        text-shadow:
-          0.35em 0 0 transparent,
-          0.7em 0 0 transparent;}
-      30% {
-        color: black;
-        text-shadow:
-          0.35em 0 0 transparent,
-          0.7em 0 0 transparent;}
-      45% {
-        text-shadow:
-          0.35em 0 0 black,
-          0.7em 0 0 transparent;}
-      60%, 100% {
-        text-shadow:
-          0.35em 0 0 black,
-          0.7em 0 0 black;}}
+const loadingBarContainer = document.querySelector(".loading-bar-container");
+const loadingBar = document.querySelector(".loading-bar");
+  
+// Start loading when login initiates
+netlifyIdentity.on("login", (user) => {
+    console.log("Login event triggered");
+  loadingBarContainer.style.display = "block";  // Show the loading bar
+  loadingBar.style.width = "50%"; // Set it to 50% to indicate it's in progress
+});
 
+netlifyIdentity.on("init", (user) => {
+  console.log("Init event triggered");
+  if (user) {
+    loadingBar.style.width = "100%"; // Fully loaded
+
+    // Hide the loading bar after a delay
+    setTimeout(() => {
+      loadingBarContainer.style.display = "none";
+    }, 1000);
   }
+});
+
+// Add other events if needed...
+
+</script>
+
+<style lang="scss">
+  .LoadingPlaceholder {
+  position: relative;
+
+  .text {
+    display: block;
+    margin-bottom: 10px; // Add some space between the text and the bar
+  }
+
+  .text:after {
+    content: ' .';
+    font-size: 2em;
+    animation: dots 1.5s steps(5, end) infinite;
+  }
+
+  .loading-bar-container {
+    width: 100%;
+    height: 4px;
+    background-color: #e0e0e0;
+    position: relative;
+  }
+
+  .loading-bar {
+    height: 100%;
+    width: 0%; // Initially, the bar will be hidden
+    background-color: #3498db;
+    position: relative;
+    transition: width 0.3s;
+  }
+
+  @keyframes dots {
+    0%, 15% {
+      color: transparent;
+      text-shadow:
+        0.35em 0 0 transparent,
+        0.7em 0 0 transparent;
+    }
+    30% {
+      color: black;
+      text-shadow:
+        0.35em 0 0 transparent,
+        0.7em 0 0 transparent;
+    }
+    45% {
+      text-shadow:
+        0.35em 0 0 black,
+        0.7em 0 0 transparent;
+    }
+    60%, 100% {
+      text-shadow:
+        0.35em 0 0 black,
+        0.7em 0 0 black;
+    }
+  }
+}
+
 </style>
 
