--- a/src/components/Header/OptionsButton.astro
+++ b/src/components/Header/OptionsButton.astro
@@ -15,7 +15,8 @@ const { heading, body } = Astro.props as Props;
   .OptionsButton {
       border: 1px solid var(--custom-accent-1-50);
       border-radius: 0.5rem;
-      background-color: transparent;
+      // background-color: transparent;
+      background-color: var(--theme-code-inline-bg);
       cursor: pointer;
       font-size: 1rem;
       padding: 0.15em;
