--- a/src/components/Header/ThemeToggleButton.css
+++ b/src/components/Header/ThemeToggleButton.css
@@ -3,6 +3,8 @@
 	align-items: center;
 	gap: 0.25em;
 	padding: 0.33em 0.67em;
+	min-height: 36px;
+	border: 1px solid var(--custom-accent-1-50);
 	margin-top: 32px;
 	border-radius: 99em;
 	background-color: var(--theme-code-inline-bg);
