--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -16,6 +16,7 @@ import '@fontsource/ibm-plex-mono/400-italic.css';
 <link rel="stylesheet" href="/custom-theme.css" />
 <link rel="stylesheet" href="/theme.css" />
 <link rel="stylesheet" href="/index.css" />
+<link rel="stylesheet" href="/TutorialTracker.css" />
 
 <!-- Scrollable a11y code helper -->
 <script type="module" src="/make-scrollable-code-focusable.js"></script>
