persistent TutorialTracker status working

--- a/src/components/tutorial/Progress.astro
+++ b/src/components/tutorial/Progress.astro
@@ -43,8 +43,8 @@ const doneLabel = t('progress.done');
 <script>
 	import { ProgressStore } from './ProgressStore';
 
-	console.log("CheckMark HTML Element creation started");
-	console.log(ProgressStore);
+	//console.log("CheckMark HTML Element creation started");
+	//console.log(ProgressStore);
 
 	class CheckMark extends HTMLElement {
 		private readonly loaded: boolean;
